--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" href="css/main.css" />
+    <link rel="stylesheet" href="main.css" />
     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.12.0/css/all.css"
@@ -78,6 +78,6 @@
         >My Resume</a
       >
     </footer>
-    <script src="/jokotoye/js/main.js"></script>
+    <script src="main.js"></script>
   </body>
 </html>
