--- a/work.html
+++ b/work.html
@@ -55,7 +55,7 @@
       </h1>
 
       <div class="proj-info">
-        <img src="/dist/img/123Proj.png" alt="123 App" class="pro-img" />
+        <img src="123Proj.png" alt="123 App" class="pro-img" />
         <div class="proj">
           <h3 class="text-secondary">1-2-3 ADL Project</h3>
           <p>
@@ -88,7 +88,7 @@
         </div>
       </div>
       <div class="proj-info">
-        <img src="/dist/img/NSBE.png" alt="123 App" class="pro-img" />
+        <img src="NSBE.png" alt="123 App" class="pro-img" />
         <div class="proj">
           <h3 class="text-secondary">NSBE Website Development</h3>
           <p>
