--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       integrity="sha384-REHJTs1r2ErKBuJB0fCK99gCYsVjwxHrSU0N7I1zl9vZbggVJXRMsv/sLlOAGb4M"
       crossorigin="anonymous"
     />
-    <title>Emmanuel's Portfilio</title>
+    <title>Emmanuel's Portfolio</title>
   </head>
   <body id="bg-img">
     <div class="overlay"></div>
