--- a/about.html
+++ b/about.html
@@ -56,7 +56,7 @@
 
       <div class="about-info">
         <img
-          src="https://media.licdn.com/dms/image/C5603AQEKqRCikabtRQ/profile-displayphoto-shrink_200_200/0?e=1582156800&v=beta&t=SYIPI-9BOxWoB5n7egwOq61ldr677osgQcTtPLv95Nw"
+          src="headshot.png"
           alt="Emmanuel Jokotoye"
           class="bio-img"
         />
