--- a/about.html
+++ b/about.html
@@ -56,7 +56,7 @@
 
       <div class="about-info">
         <img
-          src="headshot.png"
+          src="headshot.jpg"
           alt="Emmanuel Jokotoye"
           class="bio-img"
         />
