fixed grammar errors

--- a/work.html
+++ b/work.html
@@ -59,23 +59,23 @@
         <div class="proj">
           <h3 class="text-secondary">1-2-3 ADL Project</h3>
           <p>
-            Through this project I got an opportunity to learn about healthcare
-            as well as the world of the design and the impact it as on the end
+            Through this project, I got an opportunity to learn about healthcare
+            as well as the world of the design and the impact design has on the end
             user, and with this project infection prevention was the primary
-            topc. Studies conducted by Cincinnati Children's Hospital show that
-            infection prevention leads to less hospitilization which means lower
+            focus. Studies conducted by Cincinnati Children's Hospital show that
+            infection prevention leads to less hospitalization which means lower
             cost for the individual. A task management device (with customized
-            hardware) known as the 1-2-3 Device was developed, this device was
-            designed to help patients track their activities of dialy living
+            hardware) known as the 1-2-3 Device was developed in  previous years, this device was
+            designed to help patients track their activities of daily living
             (bathing, exercise, and oral care) which serve to help prevent
             infections. With this project the team was task to redesign the
             1-2-3 Device (due to reliability issues due to problems with the
             hardware) into something more modern and impactful. I got to do user
-            research and develope a web application that would be use to
-            conducted testing to determine weather or not a mobile application
-            with incentivization is needed to increase adherence of activities
-            of dialy living and to see how a mobile application will complete
-            with the plethora of applications that.
+            research and develop a web application that would be used to
+            conduct testing to determine whether or not a mobile application
+            with incentivization is needed to increase adherence to the activities
+            of daily living and to see how a mobile application will complete
+            with the plethora of applications that exist on mobile devices. The team and I conducted staff, parent, and patient interviews. The insights gained from those interviews were used to then determine what aspects (hardware, software, look and feel) of the device and infections prevention system needed to be improved.  
             <br />
           </p>
           <button>
@@ -92,9 +92,9 @@
         <div class="proj">
           <h3 class="text-secondary">NSBE Website Development</h3>
           <p>
-            With this project I got an opportunity to lead a development
+            With this project I got an opportunity to lead a software development
             project, from finding a hosting platform to coding it up. I also got
-            an opportunity to work on a team on a developement project. I really
+            an opportunity to work on a team as a lead developer. I really
             learned the impotance of commenting and version control thorugh this
             project. The project still has many iterations to go before it will
             be deemed complete, but nonetheless feel free to check out the
