--- a/contact.html
+++ b/contact.html
@@ -62,7 +62,7 @@
           jokotoeo@mail.uc.edu
         </div>
         <div>
-          <span class="text-secondary">Phone: </span> (513) - 305 - 1153
+          <span class="text-secondary">Phone: </span> Email me to find out!
         </div>
         <div>
           <span class="text-secondary">Address: </span> Where dreams live and
