--- a/about.html
+++ b/about.html
@@ -109,6 +109,32 @@
           </p>
         </div>
       </div>
+      
+       <div class="row">
+        <h3 class="text-secondary">My Playlists</h3>
+
+        <div class="col-md-1">
+          <iframe
+            src="https://open.spotify.com/embed/playlist/6GXBpUoD4wAB5sz7AEfrTa"
+            width="300"
+            height="380"
+            frameborder="0"
+            allowtransparency="true"
+            allow="encrypted-media"
+          ></iframe>
+        </div>
+
+        <div class="col-md-2">
+          <iframe
+            src="https://open.spotify.com/embed/playlist/5oYp0uI6BJblht11rOfPBG"
+            width="300"
+            height="380"
+            frameborder="0"
+            allowtransparency="true"
+            allow="encrypted-media"
+          ></iframe>
+        </div>
+      </div>
     </main>
 
     <footer id="main-footer">
