--- a/about.html
+++ b/about.html
@@ -56,7 +56,7 @@
 
       <div class="about-info">
         <img
-          src="https://media-exp1.licdn.com/dms/image/C5603AQEKqRCikabtRQ/profile-displayphoto-shrink_200_200/0?e=1586390400&v=beta&t=FtmASGz9cKSs54jVAnETNKEND2ElFnYo3KQnTZnWwA4"
+          src="./headshot.jpg"
           alt="Emmanuel Jokotoye"
           class="bio-img"
         />
