--- a/about.html
+++ b/about.html
@@ -64,12 +64,7 @@
         <div class="bio">
           <h3 class="text-secondary">BIO</h3>
           <p>
-            Born in Ogbomosho, Nigeria. Raised in Cincinnati, Ohio. My goal is
-            to some way have a positive impact on the world! My passion for
-            technology and leveraging technology to improve processes is what
-            drives me. I am looking for a co-op experience that will allow me to
-            further develop my technical skills while engaging my drive in order
-            to accomplish my goal.
+           Highly collaborative individual born in Ogbomosho, Nigeria and Raised in Cincinnati, Ohio. That transition allowed me to literally see the benefits and cons of innovation. My goal is to some way have a positive impact on the world! My passion for technology and leveraging technology to improve processes is what drives me. I am looking for a co-op experience that will allow me to further develop my technical skills while engaging my drive in order to accomplish my goal.
           </p>
         </div>
         <div class="job job-1">
